Advanced_Feature/3.11_GRPCRoute_Header/gw-grpc-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-gw
  namespace: web
spec:
  gatewayClassName: f5-bnk-gateway-class

  addresses:
    - type: IPAddress
      value: 40.30.20.20

  listeners:
    - name: bnk-listener
      protocol: HTTP
      port: 80

      allowedRoutes:
        namespaces:
          from: All

        kinds:
          - kind: GRPCRoute

---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: grpc-header-route
  namespace: web
spec:
  parentRefs:
    - name: http-gw
      sectionName: bnk-listener

  hostnames:
    - grpc.f5bnk.com

  rules:
    - matches:
        - headers:
            - type: Exact
              name: env
              value: canary

      backendRefs:
        - name: httpbin-pool
          kind: Pool
          group: k8s.f5net.com

    - matches:
        - headers:
            - type: RegularExpression
              name: env
              value: canary-.*

      backendRefs:
        - name: tea-pool
          kind: Pool
          group: k8s.f5net.com

    - backendRefs:
        - name: coffee-pool
          kind: Pool
          group: k8s.f5net.com
